# backend/cs/SocialNetApp/Profile/API/Controllers/AuthController.cs
@@ -1,4 +1,5 @@
-﻿using Microsoft.AspNetCore.Http;
+﻿using Microsoft.AspNetCore.Authorization;
+using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
 using Profile.Core.Model.Interfaces;
 using SocialNetApp.API.Dtos;
@@ -15,6 +16,7 @@ namespace SocialNetApp.API.Controllers
             _authService = authService;
         }
 
+        [AllowAnonymous]
         [HttpPost("/login")]
         public async Task<ActionResult> Login([FromBody]LoginDto dto, CancellationToken cancellationToken)
         {
